fix: Code completion performance and correctness improvements
  - Per-parse result caches added at multiple levels to eliminate redundant work on every keystroke:
    - findTokenFromOffset result cached by (parseGeneration, offset) — avoids a full parse-tree DFS on re-triggers
    - collectCandidates (C3 ATN walk) cached by (parseGeneration, c3TokenIndex, statementCtx) — the most expensive step
    - miniParseStatementNode cached by (parseGeneration, statementStart, caretOffset) — eliminates up to 3 redundant full re-parses per completion request
    - collectTableSourceAliases cached by (parseGeneration, node) — avoids repeated parse-tree traversals
  - CodeCompletionCore reused across re-parses (setParser() API added) — avoids reallocating shortcutMap and CandidatesCollection on every keystroke
  - shortcutMap pre-sized to the grammar rule count — prevents HashMap rehashes during ATN traversal
  - LinkedList → ArrayList throughout CodeCompletionCore — O(1) indexed access and better cache locality; LinkedList import removed entirely
  - Parser delay reduced from 1250 ms to 750 ms for better responsiveness
  - Async completion fetch, getCompletionItems() runs off-EDT on warm starts; cached items shown immediately, popup updated when fresh results arrive

fix: No completions after table-source keywords in nested EXISTS subqueries: added isDirectlyAfterTableSourceKeyword fallback that bypasses the
    base-class expression-context path and returns table sources directly
fix: No completions for dotted qualifier at end of statement (e.g. WHERE a.| with nothing following): mini-parse now injects __x__ = 1 when DOT is at EOF,
     preventing ANTLR panic-mode recovery from detaching the expression
fix: No completions for identifier mid-dotted-qualifier in EXISTS (e.g. WHERE a.col1|)): detects identifier-after-dot inside WHERE clause and injects  = 1 to keep the predicate valid
fix: No completions when caret is in whitespace (e.g. SELECT |FROM ...): injects __x__ placeholde